adjusting spacing and fixed header/footer

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -32,7 +32,7 @@ body {color: #fff;text-align: center;font-family: "proxima-nova",sans-serif; fon
 .cover-container {margin-right: auto;margin-left: auto;}
 
 /* Padding for spacing */
-.inner {padding: 20px;margin-top: 100px;}
+.inner {padding: 20px;}
 
 .forkmeGithub {position:absolute; top:0; right:0; border:0; z-index:3000;}
 img.forkmeGithub {height:75px; width:75px;}
@@ -63,7 +63,7 @@ img.forkmeGithub {height:75px; width:75px;}
 .masthead-nav > li > a:hover,
 .masthead-nav > li > a:focus {background-color: transparent;border-bottom-color: #a9a9a9;border-bottom-color: rgba(255,255,255,.25);}
 .masthead-nav > .active > a, .masthead-nav > .active > a:hover, .masthead-nav > .active > a:focus {color: #fff;border-bottom-color: #fff;}
-.navbar-text {float:none; margin:18px 35px 15px 0; font-size: 12px; font-style: italic;color: #999; /* IE8 proofing */color: rgba(255,255,255,.5);}
+.navbar-text {float:none; margin:18px 35px 15px 0; font-size: 12px; font-style: italic; color: #999; /* IE8 proofing */color: rgba(255,255,255,.5)!important;}
 .navbar-inverse .navbar-brand {float: none;}
 
 
@@ -81,10 +81,11 @@ img.forkmeGithub {height:75px; width:75px;}
 
   /* Pull out the header and footer */
   .masthead {position: fixed;top: 0;}
-  .mastfoot {position: fixed;bottom: 0;font-size: 12px;}
+  .mastfoot {bottom: 0;font-size: 12px;}
 
   /* Start the vertical centering */
-  .site-wrapper-inner {vertical-align: middle;}
+  /*.site-wrapper-inner {vertical-align: middle;}*/
+  .inner {margin-top: 80px;}
 
   /* Handle the widths */
   .masthead, .mastfoot, .cover-container {width: 100%; /* Must be percentage or pixels for horizontal alignment */}
